k8s-aws/ingress/production/api-rw.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-rw
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:534760749991:certificate/3f09f93d-083c-4c22-aad2-341980f7d2be'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  tls:
    - hosts:
        - ui.resourcewatch.org
        - api.resourcewatch.org
      secretName: api-rw-certificate
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
    - host: ui.resourcewatch.org
      http:
        paths:
        - path: /*
          backend:
            serviceName: ct-ui
            servicePort: 80
    - host: api.resourcewatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
