k8s-aws/ingress/production/api.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
#    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  tls:
    - hosts:
        - api-rw.vizzuality.com
        - production-api.globalforestwatch.org
        - ui.resourcewatch.org
        - api.resourcewatch.org
      secretName: api-certificate
  rules:
    - host: api-rw.vizzuality.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: ui.resourcewatch.org
      http:
        paths:
        - path: /*
          backend:
            serviceName: ct-ui
            servicePort: 80
    - host: api.resourcewatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: production-api.globalforestwatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
