k8s-aws/ingress/production/climate-watch-india.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: climate-watch-india
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:534760749991:certificate/b3caff30-2da5-42bc-90e6-3c6e18d776a8'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - india.climatewatchdata.org
        - indiaclimateexplorer.org
        - india-platform-staging.vizzuality.com
      secretName: climate-watch-india-certificate
  rules:
    - host: india.climatewatchdata.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: indiaclimateexplorer.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: india-platform-staging.vizzuality.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
