k8s-aws/ingress/production/climate-watch-indonesia.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: climate-watch-indonesia
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:534760749991:certificate/e9ce3345-288c-4f5a-af24-b3b5e0462d95'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - indonesia.climatewatchdata.org
      secretName: climate-watch-indonesia-certificate
  rules:
    - host: indonesia.climatewatchdata.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
