k8s-aws/ingress/production/emissions-pathways.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: emissions-pathways
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
#    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - emissionspathways.org
        - www.emissionspathways.org
        - data.emissionspathways.org
      secretName: emissions-pathways-certificate
  rules:
    - host: emissionspathways.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: www.emissionspathways.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80

    - host: data.emissionspathways.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
