k8s-aws/ingress/production/ocean-watch.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocean-watch
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:534760749991:certificate/f18cd493-6d6a-428a-ac88-69b699892a51'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - oceanwatchdata.org
        - www.oceanwatchdata.org
      secretName: ocean-watch-certificate
  rules:
    - host: oceanwatchdata.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: www.oceanwatchdata.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
